--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+asgiref==3.10.0
 contourpy==1.3.3
 cycler==0.12.1
+Django==5.2.8
+django-scheduler==0.10.1
 fonttools==4.60.1
+icalendar==6.3.2
 kiwisolver==1.4.9
 matplotlib==3.10.7
 numpy==2.3.4
@@ -12,4 +16,5 @@ pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 six==1.17.0
+sqlparse==0.5.3
 tzdata==2025.2
